# Autonomous-Research-Agent

./: .dockerignore  .gitignore  Architecture.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ara/: azure_embeddings.py  azure_llm.py  config.py  graph.py  memory.py  tavily_search.py
ara/agents/: critic.py  planner.py  reporter.py  researcher.py  summarizer.py
ara/tools/: arxiv_tool.py  ddg_search.py  web_fetch.py
backend/: Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  requirements.txt
backend/ara/: azure_embeddings.py  azure_llm.py  config.py  graph.py  logger.py  memory.py  schemas.py  tavily_search.py
backend/ara/agents/: critic.py  planner.py  reporter.py  researcher.py  summarizer.py
backend/ara/tools/: arxiv_tool.py  ddg_search.py  web_fetch.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: theme-toggle.tsx
